--- a/index.html
+++ b/index.html
@@ -1,1 +1,150 @@
-<div>Hello World</div>
+<!DOCTYPE html>
+<html lang="nl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>AI Workshop Intakeformulier</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <style>
+      .slider-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      .slider-label {
+        margin: 0 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container my-5">
+      <h2>Intakeformulier AI Workshop</h2>
+      <form id="workshopForm">
+        <!-- Team of Individueel -->
+        <div class="mb-3 slider-container">
+          <span class="slider-label">Team</span>
+          <input
+            type="range"
+            class="form-range"
+            min="1"
+            max="5"
+            id="team-individual-slider"
+            oninput="updateLabelValue('teamIndividualOutput', this.value)"
+          />
+          <span class="slider-label">Individueel</span>
+          <span
+            id="teamIndividualOutput"
+            class="slider-label"
+            >3</span
+          >
+        </div>
+
+        <!-- Serieus of Fun -->
+        <div class="mb-3 slider-container">
+          <span class="slider-label">Serieus</span>
+          <input
+            type="range"
+            class="form-range"
+            min="1"
+            max="5"
+            id="serious-fun-slider"
+            oninput="updateLabelValue('seriousFunOutput', this.value)"
+          />
+          <span class="slider-label">Fun</span>
+          <span
+            id="seriousFunOutput"
+            class="slider-label"
+            >3</span
+          >
+        </div>
+
+        <!-- Mate van Competitie -->
+        <div class="mb-3 slider-container">
+          <span class="slider-label">Laag</span>
+          <input
+            type="range"
+            class="form-range"
+            min="1"
+            max="5"
+            id="competition-slider"
+            oninput="updateLabelValue('competitionOutput', this.value)"
+          />
+          <span class="slider-label">Hoog</span>
+          <span
+            id="competitionOutput"
+            class="slider-label"
+            >3</span
+          >
+        </div>
+
+        <!-- Niveau van AI Kennis -->
+        <div class="mb-3 slider-container">
+          <span class="slider-label">Debutant</span>
+          <input
+            type="range"
+            class="form-range"
+            min="1"
+            max="5"
+            id="ai-knowledge-slider"
+            oninput="updateLabelValue('aiKnowledgeOutput', this.value)"
+          />
+          <span class="slider-label">Wizard</span>
+          <span
+            id="aiKnowledgeOutput"
+            class="slider-label"
+            >3</span
+          >
+        </div>
+
+        <!-- Samenvatting -->
+        <div class="mb-3">
+          <button
+            type="button"
+            class="btn btn-primary"
+            onclick="updateSummary()"
+          >
+            Toon Samenvatting
+          </button>
+        </div>
+        <div
+          id="summary"
+          class="alert alert-info"
+          style="display: none"
+        ></div>
+      </form>
+    </div>
+
+    <!-- JavaScript -->
+    <script>
+      function updateLabelValue(labelId, value) {
+        document.getElementById(labelId).textContent = value;
+      }
+
+      function updateSummary() {
+        var summary =
+          "Team/Individueel Score: " +
+          document.getElementById("team-individual-slider").value;
+        summary +=
+          "<br>Serieus/Fun Score: " +
+          document.getElementById("serious-fun-slider").value;
+        summary +=
+          "<br>Competitie Score: " +
+          document.getElementById("competition-slider").value;
+        summary +=
+          "<br>AI Kennisniveau Score: " +
+          document.getElementById("ai-knowledge-slider").value;
+
+        document.getElementById("summary").innerHTML = summary;
+        document.getElementById("summary").style.display = "block";
+      }
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
