--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <!-- Mate van Competitie -->
         <div class="mb-3 slider-container">
-          <span class="slider-label">Competitieniveau: Laag</span>
+          <span class="slider-label">Laag</span>
           <input
             type="range"
             class="form-range"
