--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="nl">
   <head>
     <meta charset="UTF-8" />
@@ -15,10 +15,18 @@
       .slider-container {
         display: flex;
         align-items: center;
-        justify-content: space-between;
       }
       .slider-label {
         margin: 0 10px;
+      }
+      .slider-content {
+        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      h4 {
+        margin-bottom: 0.5rem;
       }
     </style>
   </head>
@@ -27,79 +35,91 @@
       <h2>Intakeformulier AI Workshop</h2>
       <form id="workshopForm">
         <!-- Team of Individueel -->
+        <h4>Doelgroep</h4>
         <div class="mb-3 slider-container">
           <span class="slider-label">Individueel</span>
-          <input
-            type="range"
-            class="form-range"
-            min="1"
-            max="5"
-            id="team-individual-slider"
-            oninput="updateLabelValue('teamIndividualOutput', this.value)"
-          />
+          <div class="slider-content">
+            <input
+              type="range"
+              class="form-range"
+              min="1"
+              max="5"
+              id="team-individual-slider"
+              oninput="updateLabelValue('teamIndividualOutput', this.value)"
+            />
+            <span
+              id="teamIndividualOutput"
+              class="slider-label"
+              >3</span
+            >
+          </div>
           <span class="slider-label">Team</span>
-          <span
-            id="teamIndividualOutput"
-            class="slider-label"
-            >3</span
-          >
         </div>
 
         <!-- Serieus of Fun -->
+        <h4>Purpose</h4>
         <div class="mb-3 slider-container">
           <span class="slider-label">Serieus</span>
-          <input
-            type="range"
-            class="form-range"
-            min="1"
-            max="5"
-            id="serious-fun-slider"
-            oninput="updateLabelValue('seriousFunOutput', this.value)"
-          />
+          <div class="slider-content">
+            <input
+              type="range"
+              class="form-range"
+              min="1"
+              max="5"
+              id="serious-fun-slider"
+              oninput="updateLabelValue('seriousFunOutput', this.value)"
+            />
+            <span
+              id="seriousFunOutput"
+              class="slider-label"
+              >3</span
+            >
+          </div>
           <span class="slider-label">Fun</span>
-          <span
-            id="seriousFunOutput"
-            class="slider-label"
-            >3</span
-          >
         </div>
 
         <!-- Mate van Competitie -->
+        <h4>Competitie</h4>
         <div class="mb-3 slider-container">
           <span class="slider-label">Laag</span>
-          <input
-            type="range"
-            class="form-range"
-            min="1"
-            max="5"
-            id="competition-slider"
-            oninput="updateLabelValue('competitionOutput', this.value)"
-          />
+          <div class="slider-content">
+            <input
+              type="range"
+              class="form-range"
+              min="1"
+              max="5"
+              id="competition-slider"
+              oninput="updateLabelValue('competitionOutput', this.value)"
+            />
+            <span
+              id="competitionOutput"
+              class="slider-label"
+              >3</span
+            >
+          </div>
           <span class="slider-label">Hoog</span>
-          <span
-            id="competitionOutput"
-            class="slider-label"
-            >3</span
-          >
         </div>
 
         <!-- Niveau van AI Kennis -->
+        <h4>Niveau</h4>
         <div class="mb-3 slider-container">
           <span class="slider-label">Debutant</span>
-          <input
-            type="range"
-            class="form-range"
-            min="1"
-            max="5"
-            id="ai-knowledge-slider"
-            oninput="updateLabelValue('aiKnowledgeOutput', this.value)"
-          />
+          <div class="slider-content">
+            <input
+              type="range"
+              class="form-range"
+              min="1"
+              max="5"
+              id="ai-knowledge-slider"
+              oninput="updateLabelValue('aiKnowledgeOutput', this.value)"
+            />
+            <span
+              id="aiKnowledgeOutput"
+              class="slider-label"
+              >3</span
+            >
+          </div>
           <span class="slider-label">Wizard</span>
-          <span
-            id="aiKnowledgeOutput"
-            class="slider-label"
-            >3</span
-          >
         </div>
 
         <!-- Samenvatting -->
@@ -122,60 +142,70 @@
 
     <!-- JavaScript -->
     <script>
+      function updateLabelValue(labelId, value) {
+        document.getElementById(labelId).textContent = value;
+      }
       function updateSummary() {
-    var teamIndividualScore = document.getElementById('team-individual-slider').value;
-    var seriousFunScore = document.getElementById('serious-fun-slider').value;
-    var competitionScore = document.getElementById('competition-slider').value;
-    var aiKnowledgeScore = document.getElementById('ai-knowledge-slider').value;
+        var teamIndividualScore = document.getElementById(
+          "team-individual-slider"
+        ).value;
+        var seriousFunScore =
+          document.getElementById("serious-fun-slider").value;
+        var competitionScore =
+          document.getElementById("competition-slider").value;
+        var aiKnowledgeScore = document.getElementById(
+          "ai-knowledge-slider"
+        ).value;
 
-    var summary = 'Bedankt voor uw input. We gaan voor u een workshop ontwikkelen die ';
+        var summary =
+          "Bedankt voor uw input. We gaan voor u een workshop ontwikkelen die ";
 
-    // Team of Individueel
-    if (teamIndividualScore < 3) {
-        summary += 'vooral gericht zal zijn op individuele ontwikkeling ';
-    } else if (teamIndividualScore > 3) {
-        summary += 'vooral gericht zal zijn op het ontwikkelen van teams ';
-    } else {
-        summary += 'een balans biedt tussen teamontwikkeling en individuele groei ';
-    }
-    summary += '(score ' + teamIndividualScore + ') ';
+        // Team of Individueel
+        if (teamIndividualScore < 3) {
+          summary += "vooral gericht zal zijn op individuele ontwikkeling ";
+        } else if (teamIndividualScore > 3) {
+          summary += "vooral gericht zal zijn op het ontwikkelen van teams ";
+        } else {
+          summary +=
+            "een balans biedt tussen teamontwikkeling en individuele groei ";
+        }
+        summary += "(score " + teamIndividualScore + ") ";
 
-    // Serieus of Fun
-    if (seriousFunScore < 3) {
-        summary += 'met behulp van serious gaming ';
-    } else if (seriousFunScore > 3) {
-        summary += 'met een focus op fun en interactie ';
-    } else {
-        summary += 'die zowel serieuze als leuke elementen bevat ';
-    }
-    summary += '(score ' + seriousFunScore + '). ';
+        // Serieus of Fun
+        if (seriousFunScore < 3) {
+          summary += "met behulp van serious gaming ";
+        } else if (seriousFunScore > 3) {
+          summary += "met een focus op fun en interactie ";
+        } else {
+          summary += "die zowel serieuze als leuke elementen bevat ";
+        }
+        summary += "(score " + seriousFunScore + "). ";
 
-    // Mate van Competitie
-    summary += 'De workshop zal ';
-    if (competitionScore < 3) {
-        summary += 'weinig competitieve elementen bevatten ';
-    } else if (competitionScore > 3) {
-        summary += 'veel competitieve elementen bevatten ';
-    } else {
-        summary += 'een evenwichtige mate van competitie hebben ';
-    }
-    summary += '(score ' + competitionScore + ') ';
+        // Mate van Competitie
+        summary += "De workshop zal ";
+        if (competitionScore < 3) {
+          summary += "weinig competitieve elementen bevatten ";
+        } else if (competitionScore > 3) {
+          summary += "veel competitieve elementen bevatten ";
+        } else {
+          summary += "een evenwichtige mate van competitie hebben ";
+        }
+        summary += "(score " + competitionScore + ") ";
 
-    // Niveau van AI Kennis
-    summary += 'en zal ';
-    if (aiKnowledgeScore < 3) {
-        summary += 'vooral gericht zijn op kennismaking met AI ';
-    } else if (aiKnowledgeScore > 3) {
-        summary += 'zich richten op geavanceerde AI-concepten ';
-    } else {
-        summary += 'elementen voor zowel debutanten als wizards bevatten ';
-    }
-    summary += '(score ' + aiKnowledgeScore + ').';
+        // Niveau van AI Kennis
+        summary += "en zal ";
+        if (aiKnowledgeScore < 3) {
+          summary += "vooral gericht zijn op kennismaking met AI ";
+        } else if (aiKnowledgeScore > 3) {
+          summary += "zich richten op geavanceerde AI-concepten ";
+        } else {
+          summary += "elementen voor zowel debutanten als wizards bevatten ";
+        }
+        summary += "(score " + aiKnowledgeScore + ").";
 
-    document.getElementById('summary').innerHTML = summary;
-    document.getElementById('summary').style.display = 'block';
-}
-
+        document.getElementById("summary").innerHTML = summary;
+        document.getElementById("summary").style.display = "block";
+      }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
