Changed slider steps

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               class="form-range"
               min="1"
               max="5"
+              step="0.1"
               id="team-individual-slider"
               oninput="updateLabelValue('teamIndividualOutput', this.value)"
             />
@@ -66,6 +67,7 @@
               class="form-range"
               min="1"
               max="5"
+              step="0.1"
               id="serious-fun-slider"
               oninput="updateLabelValue('seriousFunOutput', this.value)"
             />
@@ -88,6 +90,7 @@
               class="form-range"
               min="1"
               max="5"
+              step="0.1"
               id="competition-slider"
               oninput="updateLabelValue('competitionOutput', this.value)"
             />
@@ -110,6 +113,7 @@
               class="form-range"
               min="1"
               max="5"
+              step="0.1"
               id="ai-knowledge-slider"
               oninput="updateLabelValue('aiKnowledgeOutput', this.value)"
             />
