--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Driven Decision Making Course Projects</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+
+<div class="container mt-5">
+    <h1 class="mb-4">Data Driven Decision Making Course Projects</h1>
+    <div id="projects-container" class="row">
+        <!-- Projects will be loaded here -->
+    </div>
+</div>
+
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         fetch('projects.json')
@@ -36,3 +53,7 @@
         }
     }
 </script>
+
+
+</body>
+</html>
