--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
               const card = document.createElement("div");
               card.className = "col-md-4 mb-4";
               card.innerHTML = `
-                            <div class="card">
+                            <div class="card h-100">
                                 <div class="card-body">
                                     <h5 class="card-title">${project.title}</h5>
                                     <p class="card-text">${project.description}</p>
