--- a/projects.html
+++ b/projects.html
@@ -35,11 +35,13 @@
               const card = document.createElement("div");
               card.className = "col-md-4 mb-4";
               card.innerHTML = `
-                            <div class="card h-100">
+                            <div class="card d-flex flex-column h-100">
                                 <div class="card-body">
                                     <h5 class="card-title">${project.title}</h5>
                                     <p class="card-text">${project.description}</p>
-                                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/${videoId}" frameborder="0" allowfullscreen></iframe>
+                                    <div class="mt-auto">
+                                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/${videoId}" frameborder="0" allowfullscreen></iframe>
+                                    </div>
                                 </div>
                             </div>
                         `;
