--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>M3DM Data Mining Projects</title>
+    <title>M3DM Individual Projects</title>
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container mt-5">
-      <h1 class="mb-4">M3DM Data Mining Projects</h1>
+      <h1 class="mb-4">M3DM Individual Projects</h1>
       <div
         id="projects-container"
         class="row"
