Added content and changed theme

--- a/projects.html
+++ b/projects.html
@@ -8,13 +8,25 @@
     />
     <title>M3DM Individual Projects</title>
     <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/quartz/bootstrap.min.css"
       rel="stylesheet"
     />
   </head>
   <body>
     <div class="container mt-5">
       <h1 class="mb-4">M3DM Individual Projects</h1>
+      <p>
+        We have created a collection of video's for you to explore. These videos
+        collectively cover a broad spectrum of data science, encompassing
+        machine learning, AI, data analysis, visualization, application
+        development, emerging technologies, specialized applications, and
+        quality assurance, providing a holistic view of the field.
+      </p>
+      <p>
+        Your assignment is to choose at least one video and use it as a starting
+        point to exploration journey. At the end of your journey you will able
+        to demonstrate a minimum viable data product.
+      </p>
       <div
         id="projects-container"
         class="row"
