--- a/projects.html
+++ b/projects.html
@@ -16,16 +16,20 @@
     <div class="container mt-5">
       <h1 class="mb-4">M3DM Individual Projects</h1>
       <p>
-        We have created a collection of video's for you to explore. These videos
-        collectively cover a broad spectrum of data science, encompassing
-        machine learning, AI, data analysis, visualization, application
-        development, emerging technologies, specialized applications, and
-        quality assurance, providing a holistic view of the field.
+        We have curated an extensive collection of videos tailored to enhance
+        your understanding of data science. This selection spans various key
+        areas such as machine learning, artificial intelligence, data analysis,
+        visualization, application development, cutting-edge technologies,
+        specialized applications, and quality assurance. Each video is designed
+        to offer a comprehensive insight into the multifaceted world of data
+        science.
       </p>
       <p>
-        Your assignment is to choose at least one video and use it as a starting
-        point to exploration journey. At the end of your journey you will able
-        to demonstrate a minimum viable data product.
+        For your assignment, you are encouraged to select at least one video as
+        the cornerstone of your exploration journey. This journey will empower
+        you to delve deep into the realm of data science. By its conclusion, you
+        will have developed a minimum viable data product, showcasing your
+        newfound skills and understanding.
       </p>
       <div
         id="projects-container"
