--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         science.
       </p>
       <p>
-        For your assignment, you are encouraged to select at least one video as
+        For your assignment, you are encouraged to select <strong>at least one</strong> video as
         the cornerstone of your exploration journey. This journey will empower
         you to delve deep into the realm of data science. By its conclusion, you
         will have developed a minimum viable data product, showcasing your
