Added more instructions

--- a/projects.html
+++ b/projects.html
@@ -14,22 +14,94 @@
   </head>
   <body>
     <div class="container mt-5">
-      <h1 class="mb-4">M3DM Data Mining Projects</h1>
-      <p>
-        We have curated an extensive collection of videos tailored to enhance
-        your understanding of data science. This selection spans various key
-        areas such as machine learning, artificial intelligence, data analysis,
-        visualization, application development, cutting-edge technologies,
-        specialized applications, and quality assurance. Each video is designed
-        to offer a comprehensive insight into the multifaceted world of data
-        science.
+      <h1 class="mb-4">
+        Individual assignment Minor Data-Driven Decision Making
+      </h1>
+      <p class="lead">
+        Objective: Enhance your understanding and application of data driven
+        decision making through a curated selection of videos, leading to the
+        development of a minimum viable data product.
       </p>
+
+      <h2 class="mt-5 mb-3">Overview</h2>
       <p>
-        For your assignment, you are encouraged to select <strong>at least one</strong> video as
-        the cornerstone of your exploration journey. This journey will empower
-        you to delve deep into the realm of data science. By its conclusion, you
-        will have developed a minimum viable data product, showcasing your
-        newfound skills and understanding.
+        We have carefully selected an extensive collection of videos to deepen
+        your knowledge in various key areas of data science, including machine
+        learning, artificial intelligence, data analysis, visualization,
+        application development, cutting-edge technologies, specialized
+        applications, and quality assurance.
+      </p>
+
+      <h2 class="mt-5 mb-3">Assignment Details</h2>
+      <ol>
+        <li>
+          <strong>Exploration:</strong> Begin your journey by exploring our
+          curated collection of videos.
+        </li>
+        <li>
+          <strong>Selection:</strong> Choose at least one video that resonates
+          with your interests or curiosities. This video will serve as the
+          cornerstone of your exploration journey.
+        </li>
+        <li>
+          <strong>In-depth Study:</strong> Dive deep into the topic of the
+          selected video. Understand the methodologies, technologies, and
+          concepts discussed. This phase is crucial for building a solid
+          foundation for your project.
+        </li>
+        <li>
+          <strong>Identify a Real-world Problem:</strong> Inspired by the
+          suggestion to make this assignment more applied, we encourage you to
+          identify a real-world problem. This problem could be something you've
+          encountered during an internship, in your studies, or even in your
+          personal life. The problem should be relevant to the themes covered in
+          your selected video and should be solvable using the methodologies
+          that are discussed in the video.
+        </li>
+        <li>
+          <strong>Develop a Data Product:</strong> Utilizing the knowledge and
+          insights gained from your selected video and in-depth study, develop a
+          minimum viable data product that addresses the identified problem.
+          Your data product could be a model, an application, a visualization,
+          or any other form of data-driven solution that offers a practical
+          resolution to the problem.
+        </li>
+        <li>
+          <strong>Presentation:</strong> Conclude your assignment by preparing a
+          presentation of your data product. This presentation should not only
+          showcase your final product but also detail the journey you undertook
+          to get there, including how the video inspired your approach, the
+          problem-solving process, and the application of data science
+          methodologies.
+        </li>
+      </ol>
+
+      <h3 class="mt-5 mb-3">Deliverables</h3>
+      <ul>
+        <li>
+          A detailed report on your exploration journey, including the rationale
+          behind your video selection and an in-depth analysis of the chosen
+          video.
+        </li>
+        <li>
+          A comprehensive description of the identified problem and why it is
+          significant.
+        </li>
+        <li>
+          Documentation of your data product development process, including data
+          sources, methodologies, and technologies used.
+        </li>
+        <li>
+          A final presentation showcasing your data product and its potential
+          impact on solving the identified problem.
+        </li>
+      </ul>
+
+      <p>
+        This assignment is an opportunity to not only deepen your understanding
+        of data driven decision making but also to apply your skills in a
+        meaningful way. We encourage creativity, critical thinking, and a
+        problem-solving mindset throughout this journey. Good luck!
       </p>
       <hr class="bg-white border-2 border-top border-white" />
       <div
