--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
       <h2 class="mt-5 mb-3">Overview</h2>
       <p>
         We have carefully selected an extensive collection of videos to deepen
-        your knowledge in various key areas of data science, including machine
+        your knowledge in various key areas of data driven decision making, including machine
         learning, artificial intelligence, data analysis, visualization,
         application development, cutting-edge technologies, specialized
         applications, and quality assurance.
