--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
           presentation of your data product. This presentation should not only
           showcase your final product but also detail the journey you undertook
           to get there, including how the video inspired your approach, the
-          problem-solving process, and the application of data science
+          problem-solving process, and the application of learned
           methodologies.
         </li>
       </ol>
