--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
       <ul>
         <li>
           A detailed report on your exploration journey, including the rationale
-          behind your video selection and an in-depth analysis of the chosen
+          behind your video selection and an in-depth analysis of topics covered in the chosen
           video.
         </li>
         <li>
